#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

#AC_PREREQ(2.60)
AC_INIT(asm8080, 2.0 , lbmgmusic@gmail.com)
#AC_CONFIG_SRCDIR([asm_dir.c], [exp_parser.c], [main.c], [opcode.c], [util.c])
#AC_CONFIG_HEADER([_dummy.h asm_dir.h err_code.h exp_parser.h main.h opcode.h project.h util.h war_code.h])
AM_INIT_AUTOMAKE(asm8080, main)

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

# Checks for libraries.
AM_PROG_LIBTOOL

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile src/Makefile])

#AC_OUTPUT(app/Makefile)
AC_OUTPUT



